feat: /mailbox and fixup swag comments
